# xmonad-config

./: .gitignore  .gitmodules  build  build.sh  cabal.project  default.nix  dunstrc  install-deps.sh  install.sh  nixos.nix  nixpkgs.nix  set-bg.sh  shell.nix  start.sh  xmonad-ben.cabal  xmonad.hs  xsession
lib/: Brightness.hs  MPRIS2.hs  Property.hs  PulseAudio.hs  TrackPlayers.hs
taffybar/: taffybar-ben.cabal  taffybar.hs
taffybar-ben/: default.nix  taffybar-ben.cabal  taffybar.css  taffybar.hs
xmonad-ben/: xmonad-ben.cabal  xmonad.hs
xmonad-ben/lib/: PulseAudio.hs  WorkspacePrompt.hs
