name:                taffybar-ben
version:             0.1.0.0
license:             BSD3
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2018 Ben Gamari
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
data-files:          taffybar.css

executable taffybar-ben
  main-is:             taffybar.hs
  ghc-options:         -threaded "-with-rtsopts=-I0 -V0 -qg -s" -rtsopts
  other-modules:       Paths_taffybar_ben
  build-depends:       base,
                       mtl,
                       text,
                       filepath,
                       colour,
                       hslogger,
                       process,
                       taffybar
  default-language:    Haskell2010
