name:                taffybar-ben
version:             0.1.0.0
license:             BSD3
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2018 Ben Gamari
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable taffybar-ben
  main-is:             taffybar.hs
  build-depends:       base >=4.9 && <4.11,
                       mtl,
                       text,
                       colour,
                       gtk,
                       process,
                       taffybar
  default-language:    Haskell2010
